tests/reference/ast_new-with1-6c88c0f.stderr
tokenizer error: Token '\' is not recognized
  --> tests/parser/with1.py:18:20
   |
18 | with a, b, c as y, \
   |                    ^ token not recognized
